WIP: Elastic Database